FIX | Padding on mobile

--- a/components/SubscriptionCompleteBox/style.module.scss
+++ b/components/SubscriptionCompleteBox/style.module.scss
@@ -3,7 +3,6 @@
 .subscriptionCompletion {
   text-align: center;
   height: 100%;
-  background: blue;
 
   .container {
     min-height: 400px;
